      (Jonathan Lange)

  BUG FIXES:

    * Fix "is not a stackable format" error when pushing a
      stackable-format branch with an unstackable-format repository to a
      destination with a default stacking policy.  (Andrew Bennetts)

    * Fixed incorrect "Source format does not support stacking" warning
      when pushing to a smart server.  (Andrew Bennetts, #334114)
      
    * The GNU Changelog formatter is slightly improved in the case where
      the delta is empty, and now correctly claims not to support tags.
      (Andrea Bolognani)

    * Shelve can now shelve changes to a symlink target.
      (James Westby, #341558)

  DOCUMENTATION:

    * New topic `bzr help debug-flags`.  (Martin Pool)

    * The generated manpage now explicitly lists aliases as commands.
      (James Westby, #336998)

  API CHANGES:

    * New sort order for ``get_record_stream`` ``groupcompress`` which
      sorts optimally for use with groupcompress compressors. (John Arbash
      Meinel, Robert Collins)

    * The ``pb`` argument to ``fetch()`` is deprecated.
      (Martin Pool)

  INTERNALS:

    * New ``assertLength`` method based on one Martin has squirreled away
      somewhere. (Robert Collins, Martin Pool)


bzr 1.13rc1 "paraskavedekatriaphobia" 2009-03-10
------------------------------------------------
This release includes bug fixes and a few performance and feature improvements.
GNU Changelog output can now be produced by ``bzr log --format gnu-changelog``.
Debug flags can now be set in ``~/.bazaar/bazaar.conf``. Lightweight Checkouts
and Stacked Branches should both be much faster over remote connections.

  COMPATIBILITY BREAKS:

    * ``bzr log --line`` now indicates which revisions are merges with
      `[merge]` after the date.  Scripts which parse the output of this
      command may need to be adjusted.
      (Neil Martinsen-Burrell)

  NEW FEATURES:

    * ``bzr reconfigure`` now supports --with-trees and --with-no-trees